force-app/main/default/objects/Lead/fields/AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>AddressLine2__c</fullName>
    <label>Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>