force-app/main/default/objects/Lead/fields/Architects__c.field-meta.xml
<CustomField>
    <fullName>Architects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Architects</label>
    <referenceTo>Architect__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>