force-app/main/default/objects/Lead/fields/Bypass_Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Assignment_Rule__c</fullName>
    <formula>CreatedBy.Profile_Name__c = &quot;Executive&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bypass_Assignment_Rule</label>
    <type>Checkbox</type>
</CustomField>