force-app/main/default/objects/Lead/fields/Check_List_Items__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Items__c</fullName>
    <label>Check List Items</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROOFTILE</fullName>
                <label>Roofing Solution and Clay products</label>
            </value>
            <value>
                <fullName>TILE</fullName>
                <label>Tiles</label>
            </value>
            <value>
                <fullName>SANITARY</fullName>
                <label>Sanitary ware</label>
            </value>
            <value>
                <fullName>ADHESIVE</fullName>
                <label>Adhesives</label>
            </value>
            <value>
                <fullName>N.STONE</fullName>
                <label>Imported Marble, Granite and Natural Stones</label>
            </value>
            <value>
                <fullName>SURFACE</fullName>
                <label>Surface care</label>
            </value>
            <value>
                <fullName>WOODTILE</fullName>
                <label>Timber / Wooden flooring</label>
            </value>
            <value>
                <fullName>GLSBRK</fullName>
                <label>Glass Bricks</label>
            </value>
            <value>
                <fullName>LIGHTS</fullName>
                <label>Lighting Solutions</label>
            </value>
            <value>
                <fullName>OTHERS</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>FITTINGS</fullName>
                <label>Bathing Solution</label>
            </value>
            <value>
                <fullName>PAINT</fullName>
                <label>Paints</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>