force-app/main/default/objects/Lead/fields/Corporation__c.field-meta.xml
<CustomField>
    <fullName>Corporation__c</fullName>
    <label>Corporation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>District__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Thiruvananthapuram Municipal Corporation</fullName>
            </value>
            <value>
                <fullName>Kollam Municipal Corporation</fullName>
            </value>
            <value>
                <fullName>Kochi Municipal Corporation</fullName>
            </value>
            <value>
                <fullName>Thrissur Municipal Corporation</fullName>
            </value>
            <value>
                <fullName>Kozhikode Municipal Corporation</fullName>
            </value>
            <value>
                <fullName>Kannur Municipal Corporation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>