force-app/main/default/objects/Lead/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+1</fullName>
            </value>
            <value>
                <fullName>+7</fullName>
            </value>
            <value>
                <fullName>+20</fullName>
            </value>
            <value>
                <fullName>+27</fullName>
            </value>
            <value>
                <fullName>+30</fullName>
            </value>
            <value>
                <fullName>+31</fullName>
            </value>
            <value>
                <fullName>+32</fullName>
            </value>
            <value>
                <fullName>+33</fullName>
            </value>
            <value>
                <fullName>+34</fullName>
            </value>
            <value>
                <fullName>+36</fullName>
            </value>
            <value>
                <fullName>+39</fullName>
            </value>
            <value>
                <fullName>+40</fullName>
            </value>
            <value>
                <fullName>+41</fullName>
            </value>
            <value>
                <fullName>+43</fullName>
            </value>
            <value>
                <fullName>+44</fullName>
            </value>
            <value>
                <fullName>+45</fullName>
            </value>
            <value>
                <fullName>+46</fullName>
            </value>
            <value>
                <fullName>+47</fullName>
            </value>
            <value>
                <fullName>+48</fullName>
            </value>
            <value>
                <fullName>+49</fullName>
            </value>
            <value>
                <fullName>+51</fullName>
            </value>
            <value>
                <fullName>+52</fullName>
            </value>
            <value>
                <fullName>+53</fullName>
            </value>
            <value>
                <fullName>+54</fullName>
            </value>
            <value>
                <fullName>+55</fullName>
            </value>
            <value>
                <fullName>+56</fullName>
            </value>
            <value>
                <fullName>+57</fullName>
            </value>
            <value>
                <fullName>+58</fullName>
            </value>
            <value>
                <fullName>+60</fullName>
            </value>
            <value>
                <fullName>+61</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>