force-app/main/default/objects/Lead/fields/Curent_User_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Curent_User_Profile_Name__c</fullName>
    <formula>$User.Profile_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Curent User Profile Name</label>
    <type>Text</type>
</CustomField>