force-app/main/default/objects/Lead/fields/Customer_Interested__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Interested</label>
    <type>Checkbox</type>
</CustomField>