force-app/main/default/objects/Lead/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alappuzha</fullName>
            </value>
            <value>
                <fullName>Thiruvananthapuram</fullName>
            </value>
            <value>
                <fullName>Kollam</fullName>
            </value>
            <value>
                <fullName>Pathanamthitta</fullName>
            </value>
            <value>
                <fullName>Kottayam</fullName>
            </value>
            <value>
                <fullName>Idukki</fullName>
            </value>
            <value>
                <fullName>Ernakulam</fullName>
            </value>
            <value>
                <fullName>Thrissur</fullName>
            </value>
            <value>
                <fullName>Palakkad</fullName>
            </value>
            <value>
                <fullName>Malappuram</fullName>
            </value>
            <value>
                <fullName>Kozhikode</fullName>
            </value>
            <value>
                <fullName>Wayanad</fullName>
            </value>
            <value>
                <fullName>Kannur</fullName>
            </value>
            <value>
                <fullName>Kasaragod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>