force-app/main/default/objects/Lead/fields/GST_Number__c.field-meta.xml
<CustomField>
    <fullName>GST_Number__c</fullName>
    <description>01 → State code (2 digits)

ABCDE → PAN’s first 5 letters

1234 → PAN’s next 4 digits

F → PAN’s last letter

1 → Entity code (1 digit/letter)

Z → Default alphabet &quot;Z&quot;

5 → Checksum (alphanumeric)</description>
    <label>GST Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>