force-app/main/default/objects/Lead/fields/Lead_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Lead_Purpose__c</fullName>
    <label>Lead Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tile</fullName>
            </value>
            <value>
                <fullName>Marble</fullName>
            </value>
            <value>
                <fullName>Granite</fullName>
            </value>
            <value>
                <fullName>Sanitary</fullName>
            </value>
            <value>
                <fullName>Fittings</fullName>
            </value>
            <value>
                <fullName>Roof tiles</fullName>
            </value>
            <value>
                <fullName>Kitchen sink</fullName>
            </value>
            <value>
                <fullName>Modular kitchen</fullName>
            </value>
            <value>
                <fullName>Pressure Pump</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Adhesives</fullName>
            </value>
            <value>
                <fullName>Surface solutions</fullName>
            </value>
            <value>
                <fullName>Wellness</fullName>
            </value>
            <value>
                <fullName>Lights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>