force-app/main/default/objects/Lead/fields/Municipality__c.field-meta.xml
<CustomField>
    <fullName>Municipality__c</fullName>
    <label>Municipality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>District__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Neyyattinkara</fullName>
            </value>
            <value>
                <fullName>Varkala</fullName>
            </value>
            <value>
                <fullName>Attingal</fullName>
            </value>
            <value>
                <fullName>Nedumangad</fullName>
            </value>
            <value>
                <fullName>Paravur</fullName>
            </value>
            <value>
                <fullName>Punalur</fullName>
            </value>
            <value>
                <fullName>Karunagappally</fullName>
            </value>
            <value>
                <fullName>Kottarakkara</fullName>
            </value>
            <value>
                <fullName>Thiruvalla</fullName>
            </value>
            <value>
                <fullName>Adoor</fullName>
            </value>
            <value>
                <fullName>Pathanamthitta</fullName>
            </value>
            <value>
                <fullName>Pandalam</fullName>
            </value>
            <value>
                <fullName>Cherthala</fullName>
            </value>
            <value>
                <fullName>Kayamkulam</fullName>
            </value>
            <value>
                <fullName>Chengannur</fullName>
            </value>
            <value>
                <fullName>Mavelikkara</fullName>
            </value>
            <value>
                <fullName>Haripad</fullName>
            </value>
            <value>
                <fullName>Kottayam</fullName>
            </value>
            <value>
                <fullName>Changanassery</fullName>
            </value>
            <value>
                <fullName>Pala</fullName>
            </value>
            <value>
                <fullName>Vaikom</fullName>
            </value>
            <value>
                <fullName>Ettumanoor</fullName>
            </value>
            <value>
                <fullName>Erattupetta</fullName>
            </value>
            <value>
                <fullName>Thodupuzha</fullName>
            </value>
            <value>
                <fullName>Kattappana</fullName>
            </value>
            <value>
                <fullName>Aluva</fullName>
            </value>
            <value>
                <fullName>Kalamassery</fullName>
            </value>
            <value>
                <fullName>Thripunithura</fullName>
            </value>
            <value>
                <fullName>North Paravur</fullName>
            </value>
            <value>
                <fullName>Perumbavoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>