force-app/main/default/objects/Lead/fields/Outlook_Gmail_Integration__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Gmail_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outlook/Gmail Integration</label>
    <type>Checkbox</type>
</CustomField>