force-app/main/default/objects/Lead/fields/POC_Contact_No__c.field-meta.xml
<CustomField>
    <fullName>POC_Contact_No__c</fullName>
    <label>POC Contact No</label>
    <type>Phone</type>
</CustomField>