force-app/main/default/objects/Lead/fields/POC_Email__c.field-meta.xml
<CustomField>
    <fullName>POC_Email__c</fullName>
    <label>POC Email</label>
    <type>Email</type>
</CustomField>