force-app/main/default/objects/Lead/fields/Qualified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Date_Time__c</fullName>
    <label>Qualified Date/Time</label>
    <type>DateTime</type>
</CustomField>