force-app/main/default/objects/Lead/fields/Qualified_Within_24_Hours__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Within_24_Hours__c</fullName>
    <formula>AND(
  NOT(ISBLANK(Qualified_Date_Time__c)),
  (Qualified_Date_Time__c - CreatedDate) &lt;= 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qualified Within 24 Hours</label>
    <type>Checkbox</type>
</CustomField>