force-app/main/default/objects/Lead/fields/Reference_List__c.field-meta.xml
<CustomField>
    <fullName>Reference_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Name</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>$Source.Referral_Sub_Source__c</field>
            <operation>equals</operation>
            <valueField>Architect__c.Reference_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Architect__c</referenceTo>
    <relationshipLabel>Leads (Reference List)</relationshipLabel>
    <relationshipName>Reference_List</relationshipName>
    <type>Lookup</type>
</CustomField>