force-app/main/default/objects/Lead/fields/Referral_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sub_Source__c</fullName>
    <label>Referral Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Maison</fullName>
            </value>
            <value>
                <fullName>Plumber</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
                <label>Referral : Loyal Customer</label>
            </value>
            <value>
                <fullName>Interior Designer</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
                <isActive>false</isActive>
                <label>Designer</label>
            </value>
            <value>
                <fullName>Interior</fullName>
                <isActive>false</isActive>
                <label>Interior</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>