force-app/main/default/objects/Lead/fields/Tasks_Reminder_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Reminder_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tasks / Reminder Notifications</label>
    <type>Checkbox</type>
</CustomField>