force-app/main/default/objects/Lead/validationRules/GST_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>GST_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(GST_Number__c)),
    NOT(REGEX(GST_Number__c, &quot;^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[0-9A-Z]{1}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>GST_Number__c</errorDisplayField>
    <errorMessage>Enter a valid GST Number (e.g., 22AAAAA0000A1Z5)</errorMessage>
</ValidationRule>