force-app/main/default/objects/Lead/validationRules/Require_GST_For_B2B_ConversionRequire.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_GST_For_B2B_ConversionRequire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsConverted = TRUE,
    TEXT(Customer_Type__c) = &quot;B2B&quot;,
    OR(
      ISBLANK(TEXT(GST_Type__c)),
      ISBLANK(GST_Number__c)
    )
  )</errorConditionFormula>
    <errorMessage>GST Type and GST Number are required for B2B customers before converting the Lead.</errorMessage>
</ValidationRule>