force-app/main/default/objects/Lead/validationRules/Unqualified_need_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified_need_reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Status )  &amp;&amp;  TEXT(Status)== &apos;Unqualified&apos;  &amp;&amp;    ISBLANK( TEXT(Unqualified_Reason__c) )</errorConditionFormula>
    <errorDisplayField>Unqualified_Reason__c</errorDisplayField>
    <errorMessage>Add the Unqualified Reason</errorMessage>
</ValidationRule>