force-app/main/default/objects/Lead/validationRules/Validate_Lead_Before_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Lead_Before_Conversion</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    IsConverted = TRUE,
    OR(
        ISBLANK(TEXT(Product_Category__c)),
        ISBLANK(LastName),
        ISBLANK(TEXT(Branch_Location__c))
    )
)</errorConditionFormula>
    <errorMessage>Please fill Product Category, Branch Location, Last Name before converting the Lead.</errorMessage>
</ValidationRule>